--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="shortcut icon" href="./img/icone.png" />
 </head>
 <body cz-shortcut-listen="true">
+  <video width="100%" autoplay="" muted="" loop="" class="bg_video">
+    <source src="img/video-01.mp4" type="video/mp4">
+</video>	
   <div class="portaCartao">
     <div class="cartao">
       <div class="lado frente">
